# rm2_simulation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: pointcloud_to_laserscan.yaml
env-hooks/: rm2_simulation.dsv.in  rm2_simulation.sh.in
ign/: gui.config
launch/: actuator_empty.launch.py  bridge.launch.py  bridge_attach.launch.py  rm2_leg.launch.py  rm2_sim.launch.py  rm2_sim_attach.launch.py  rm2_simple_empty.launch.py  rm2_wheels.launch.py  robominer.launch.py  simple_motors_frames_actuator.launch.py
launch/old/: rm2_empty.launch.py  rm2_simple.launch.py  rm2_wheels.launch.py  robominer.launch.py  x1.launch.py
models/cave/: model.config  model.sdf
models/cave/meshes/: Edgar_Section_03.DAE  Edgar_Section_08.DAE  Rock_1.stl  Rock_2.stl  Rock_3.stl  Rock_4.stl  cave.stl
models/edgar_cave/: model.config  model.sdf
models/edgar_cave/meshes/: Edgar_Section_09.DAE  Edgar_StartingArea.DAE
models/rm2/: model.sdf  rm2.urdf
models/rm2/rm2_body/: model.sdf
models/rm2/rm2_leg/: model.config  model.sdf
models/rm2/rm2_screw_actuator/: model.config  model.sdf
models/rm2/rm2_sim/: model.sdf
models/rm2/rm2_simple_leg/: model.config
models/rm2/rm2_wheels_actuator/: model.sdf
models/rm2_actuator/: model.config  model.sdf
models/rm2_body/: model.config  model.sdf
models/rm2_body/meshes/: b_simple.dae  body_blue_collision.dae  body_blue_simple.dae  body_collision.stl  body_structure_blue.dae  body_structure_collision.dae  body_structure_simple_blue.dae  test.dae
models/rm2_leg/: model.sdf
models/rm2_module/: model.config  model.sdf
models/rm2_screw_actuator/: model.sdf
models/rm2_sim/: model.sdf
models/rm2_simple/: model.sdf
models/rm2_simple_actuator/: model.sdf
models/rm2_simple_leg/: model.sdf
models/rm2_simple_leg_actuator/: model.sdf
models/rm2_wheels/: model.sdf
models/rm2_wheels_actuator/: model.sdf
models/rm2_wheels_actuator_left/: model.sdf
models/rm2_wheels_actuator_right/: model.config  model.sdf
models/x1/: model.sdf
rm2/rm2_screw_actuator/: model.sdf
rm2/rm2_simple_leg/: model.sdf
rviz/: robot_visualization.rviz
urdf/: README.md  aaaa.urdf  rm2.gazebo  rm2.urdf  rm2.urdf.xacro  rm2_attachable.urdf.xacro  rm2_leg.xacro  rm2_module.xacro  rm2_module1.urdf.xacro  rm2_screw_actuator.xacro  rm2_sim.gv  rm2_wheel_actuator.xacro  sensors.xacro
urdf/meshes/: coupling_head.dae  cutting_head_simple.dae  forward_screw.dae
worlds/: cave_world.sdf  cave_world_attach.sdf  edgar_cave_world.sdf  empty.sdf  ground_world.sdf  model.sdf
(+35 files in other folders)
