<package format="3">
  <name>robominer_rm2</name>
  <version>0.0.1</version>
  <description>robominer</description>
  <license>Apache 2.0</license>
  <maintainer email="e.aguado@upm.es">Esther Aguado</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- Fortress -->
  <exec_depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</exec_depend>
  <!-- Edifice (default) -->
  <exec_depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</exec_depend>
  <exec_depend condition="$IGNITION_VERSION == ''">ignition-gazebo5</exec_depend>
  <!-- Dome -->
  <exec_depend condition="$IGNITION_VERSION == dome">ignition-gazebo4</exec_depend>
  <!-- Citadel -->
  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</exec_depend>


  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
