<package format="3">
  <name>rm2_simulation</name>
  <version>0.0.1</version>
  <description>robominer</description>
  <license>Apache 2.0</license>
  <maintainer email="e.aguado@upm.es">Esther Aguado</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_ign_gazebo</depend>

  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>xacro</exec_depend>
  
  <depend>pointcloud_to_laserscan</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
